# findBorderCoordinates-for-screenshots

./: CMakeLists.txt  README.md  main.cpp
